# planetsca

./: .buildinfo  .gitignore  .pre-commit-config.yaml  FUNCTIONS.md  LICENSE  LICENSE.md  README.md  Running.html  data_gathering.html  data_preparation.html  download.html  genindex.html  index.html  installation.html  model_training.html  noxfile.py  objects.inv  predict.html  prediction_evaluation.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  search_filters.html  search_module.html  searchindex.js  setup.py  simplify_aoi.html  train.html  training_data.html
.github/workflows/: build-docs.yml  ci.yml  documentation.yml
_modules/: data_gathering.html  data_preparation.html  download.html  index.html  model_training.html  predict.html  prediction_evaluation.html  search.html  search_filters.html  simplify_aoi.html  train.html
_sources/: Running.rst.txt  data_gathering.rst.txt  data_preparation.rst.txt  download.rst.txt  index.rst.txt  installation.rst.txt  predict.rst.txt  prediction_evaluation.rst.txt  search_filters.rst.txt  search_module.rst.txt  simplify_aoi.rst.txt  training_data.rst.txt
_sources/examples/: search_download.ipynb.txt
code_archive/all_functions/: all_functions.py
code_archive/data_preparation/: data_preparation.py
code_archive/prediction_evaluation/: prediction_evaluation.py
config/: main.yaml
demo/: PyPlanetSCA-Demo.ipynb  make_training_data.ipynb  search-download.ipynb  search_download.ipynb  train-predict.ipynb  train_predict.ipynb
docs/: Running.rst  conf.py  data_gathering.rst  data_preparation.rst  download.rst  include-readme.rst  index.md  index.rst  installation.rst  model_training.rst  predict.rst  prediction_evaluation.rst  search_filters.rst  search_module.rst  simplify_aoi.rst  train.rst  train_predict.ipynb  training_data.rst  welcome.rst
docs/examples/: convert_model.ipynb  make_training_data.ipynb  search_download.ipynb  train_predict.ipynb
examples/: convert_model.html  quick_start.html  quick_start.ipynb  search_download.html  train_predict.html
src/PyPlanetSCA/data_preparation/: data_preparation.py
src/PyPlanetSCA/model_training/: model_training.py
src/PyPlanetSCA/prediction_evaluation/: prediction_evaluation.py
src/all_functions/: all_functions.py
src/data_preparation/: data_preparation.py
src/docs/: conf.py
src/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  planetsca.doctree
src/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  planetsca.html  py-modindex.html  search.html  searchindex.js
src/docs/_build/html/_modules/: index.html
src/docs/_build/html/_modules/planetsca/: data_gathering.html  data_preparation.html  model_training.html  prediction_evaluation.html  search_filters.html  simplify_aoi.html
src/docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  planetsca.rst.txt
src/model_training/: model_training.py
src/planetsca/: __init__.py  data_gathering.py  data_preparation.py  download.py  main.py  model_training.py  predict.py  prediction_evaluation.py  search.py  search_filters.py  simplify_aoi.py  train.py
src/planetsca/data_gathering/: data_gathering.py  geojson_551.py
src/planetsca/data_gathering.py/: data_gathering.py
src/planetsca/model_training/: model_training.py
src/planetsca/prediction_evaluation/: prediction_evaluation.py
src/prediction_evaluation/: prediction_evaluation.py
tests/: test_process.py  test_train_model.py
