[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyPlanetSCA"
version = "0.1.0"
description = "Mapping snow covered areas (SCA) from high-resolution PlanetScope images using Random Forest model"
authors = [
    { name = "Ian Chiu", email = "example@example.com" },
]
requires-python = ">=3.8"
dependencies = [
    "dvc>=2.10.0",
    "hydra-core>=1.1.1",
    "pdoc3>=0.10.0",
    "scikit-learn",
    "geopandas",
    "rasterio",
    "matplotlib",
    "joblib>=1.3.2",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pre-commit>=2.17.0",
]

[project.scripts]
planetsca = "planetsca.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/planetsca"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
]

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
